Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105862

[REG] Qt6.3.1 a MultiPointTouchArea inside another MultiPointTouchArea is reporting the wrong touch location

XMLWordPrintable

    • Android, iOS/tvOS/watchOS
    • 99a48bef8 (dev), a7ec3a629 (6.5), 8869a0593 (6.6)

      If a MultiPointTouchArea is inside another MultiPointTouchArea the touch points of the inner area are offset by its start coordinates insider the parent.

      In the example included touching the top of the inner red Rectangle will give a y coordinate of 100 when the value should be 0.

      This is a regression from 6.3.0 and 5.15.

      This does not occur on macOS. 

        1. MultiPointTouchAreaBug.zip
          4 kB
        2. test.png
          test.png
          5 kB
        3. test.qml
          2 kB
        For Gerrit Dashboard: QTBUG-105862
        # Subject Branch Project Status CR V

            matthias_rauter Matthias Rauter
            niallfraser Niall Fraser
            Votes:
            4 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes